// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Package transformer for jsdocs should work with an empty package.json 1`] = `
Object {
  "devDependencies": Object {
    "jsarch": "^5.0.0",
  },
  "greenkeeper": Object {
    "ignore": Array [
      "jsarch",
    ],
  },
  "metapak": Object {
    "data": Object {
      "files": "yolo.js",
    },
  },
  "scripts": Object {
    "architecture": "jsarch yolo.js > ARCHITECTURE.md && git add ARCHITECTURE.md",
    "precz": "npm run architecture",
    "preversion": "npm run architecture",
  },
}
`;

exports[`Package transformer for jsdocs should work with child package 1`] = `
Object {
  "devDependencies": Object {
    "jsarch": "^5.0.0",
  },
  "greenkeeper": Object {
    "ignore": Array [],
  },
  "metapak": Object {
    "data": Object {
      "childPackage": true,
      "files": "yolo.js",
    },
  },
  "scripts": Object {
    "architecture": "jsarch yolo.js > ARCHITECTURE.md && git add ARCHITECTURE.md",
  },
}
`;

exports[`Package transformer for jsdocs should work with typescrit configs 1`] = `
Object {
  "devDependencies": Object {
    "jsarch": "^5.0.0",
  },
  "greenkeeper": Object {
    "ignore": Array [],
  },
  "jsarch": Object {
    "parserOptions": Object {
      "plugins": Array [
        "typescript",
      ],
    },
  },
  "metapak": Object {
    "configs": Array [
      "typescript",
    ],
    "data": Object {
      "childPackage": true,
      "files": "yolo.js",
    },
  },
  "scripts": Object {
    "architecture": "jsarch yolo.js > ARCHITECTURE.md && git add ARCHITECTURE.md",
  },
}
`;
